# Graduate-and-Non-graduate-Analysis

./: Graduate-and-Non-graduate-Analysis.ipynb  README.md  pyproject.toml
src/gradnongradanalysis/: Data_Summary.py  EDA.py  Inference.py
src/python_files/: Data_Summary.py  EDA.py  Inference.py
