[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Graduate-and-Non-graduate-Analysis"
version = "0.1.0"
description = "Data Analysis Project 3"
authors = [{name = "Guruchandra Kundena", email = "kguruchandrak@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/kguruchandrak"
repository = "https://github.com/kguruchandrak/Graduate-and-Non-graduate-Analysis"
documentation = "https://github.com/kguruchandrak/Graduate-and-Non-graduate-Analysis/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.2.3"
matplotlib = "^3.4.2" 
seaborn = "^0.11.2" 
numpy = "^1.21.0"  